--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Currently WIP",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "watch": "tsc -w",
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
@@ -20,7 +21,11 @@
     "@config": "dist/config",
     "@utils": "dist/utils"
   },
-  "keywords": ["nodejs", "express", "postgresql"],
+  "keywords": [
+    "nodejs",
+    "express",
+    "postgresql"
+  ],
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -31,6 +36,7 @@
     "@types/express": "^4.17.11",
     "@types/helmet": "^4.0.0",
     "@types/http-errors": "^1.8.0",
+    "@types/jest": "^26.0.24",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.28",
     "@types/passport": "^1.0.6",
@@ -44,7 +50,9 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.7",
+    "ts-jest": "^27.0.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
   },
