--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Currently WIP",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --silent --verbose",
     "watch": "tsc -w",
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
@@ -41,6 +41,7 @@
     "@types/node": "^14.14.28",
     "@types/passport": "^1.0.6",
     "@types/passport-github2": "^1.2.4",
+    "@types/supertest": "^2.0.11",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
@@ -52,6 +53,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^27.0.6",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.4",
     "ts-jest": "^27.0.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5"
