--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
     "start": "cross-env NODE_ENV=production npm run build && node dist/server.js",
-    "prestart:dev": "npm run build",
+    "prestart:dev": "npm run clean",
     "start:dev": "cross-env DEBUG=server* nodemon",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint --fix --ext .ts ."
