--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/app-root-path": "^1.2.4",
+    "@types/cls-hooked": "^4.3.3",
     "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.10",
     "@types/debug": "^4.1.5",
@@ -42,6 +43,7 @@
     "@types/node": "^14.14.28",
     "@types/passport": "^1.0.6",
     "@types/passport-github2": "^1.2.4",
+    "@types/reflect-metadata": "^0.1.0",
     "@types/supertest": "^2.0.11",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
@@ -62,6 +64,7 @@
   "dependencies": {
     "app-root-path": "^3.0.0",
     "argon2": "^0.27.1",
+    "cls-hooked": "^4.2.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
@@ -77,8 +80,10 @@
     "passport-github2": "^0.1.12",
     "pg": "^8.5.1",
     "prettier": "^2.2.1",
+    "reflect-metadata": "^0.1.13",
     "superstruct": "^0.14.2",
     "typeorm": "^0.2.31",
+    "typeorm-transactional-cls-hooked": "^0.1.21",
     "winston": "^3.3.3"
   }
 }
